Many small fixes to adhere to Material Design standards
-fixed some vertical spacing for the form when on mobile
-added some spacing on larger width devices and conversions to rows on
smaller
-fixed toast popup error where it would appear relative to the
scrollbar. now always shows at bottom of screen
-momentum removed on iOS devices and Android

--- a/app/app.css
+++ b/app/app.css
@@ -89,6 +89,10 @@ Dialog
     overflow: hidden;
 }
 
+md-toast {
+    position: fixed;
+}
+
 .dialogTB {
     padding: 1.3em 0.7em;
 }
@@ -125,6 +129,10 @@ Dialog
         max-width:85%;
         max-height:85%;
         width: 85%;
+    }
+
+    md-select {
+        padding-bottom: 1.3em;
     }
 }
 
